--- a/app/views/ceramiques/show_default.html.erb
+++ b/app/views/ceramiques/show_default.html.erb
@@ -23,7 +23,7 @@
               <% verticale = false %>
               <% classe = "" %>
               <% @ceramique.photos.each do |photo| %>
-                <% photo.height > photo.width ? verticale = true : nil %>
+                <% photo&.height || 0 > photo&.width || 1 ? verticale = true : nil %>
               <% end %>
               <% verticale ? classe = "verticale" : classe = "horizontale"  %>
               <div class="front-image-div">
